# hri-challenge

./: .gitignore  .gitmodules  HRI-Interface.drawio  README.md  TODO.md  interface.md  record_audio.py  requirements.txt  speechtest2.py
docs/: TODO.md  interface.md
interface/: client.js  style.css  webGUI.html  webGUI.js  webGUIWithCorrectAddress.js  webPageUtils.js
logs/: debug_packet_log-2024-07-19T10:43:35.jsonl  debug_packet_log-2024-07-19T11:06:28.jsonl  debug_packet_log-2024-07-19T11:22:30.jsonl  debug_packet_log-2024-07-19T11:43:54.jsonl  debug_packet_log-2024-07-19T14:03:59.jsonl  debug_packet_log-2024-07-19T14:08:31.jsonl  debug_packet_log-2024-07-19T14:23:59.jsonl  debug_packet_log-2024-07-19T17:17:55.jsonl  debug_packet_log-2024-07-19T17:21:32.jsonl  debug_packet_log-2024-07-19T20:03:17.jsonl  debug_packet_log-2024-07-19T20:03:56.jsonl  debug_packet_log-2024-07-19T20:04:14.jsonl  debug_packet_log-2024-07-19T20:05:01.jsonl  debug_packet_log-2024-07-19T20:05:19.jsonl  debug_packet_log-2024-07-19T21:12:48.jsonl  debug_packet_log-2024-07-19T21:13:10.jsonl
python/: camera_image_receiver.py  command_sender.py  config.yaml  cpp2js.py  debug_info.py  debug_info_receiver.py  debuginfo.py  enums.py  js2cpp.py  main.py  receive.py  receive_image.py  receive_image_lower.py  receive_image_upper.py  ringbuffer.py  send.py  socket_thread.py  util.py
report/: TODO.md  main.fdb_latexmk  main.fls  main.tex  references.bib
robot/: CMakeLists.txt  main.cpp
src/: config.yaml  lower.py  main.py  pyaudiotest.py  speechtest.py  upper.py
src/gui/: client.js  package.json  (+6 more)
(+26 files in other folders)
